fix: [navbar] nav bar fix issue where it extends past viewport on mobile

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -38,11 +38,9 @@
     }
   }
 }
-/* Navbar adjustments for larger screens */
+
 @media (min-width: 992px) {
   #mainNav {
-    padding-left: 25px; /* Adjust padding for larger screens */
-    padding-right: 25px;
     padding-top: 25px;
     padding-bottom: 25px;
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
@@ -50,73 +48,27 @@
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
     background-color: transparent;
-  }
-  
-  #mainNav .navbar-brand {
-    font-size: 1.75em;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-  }
-  
-  #mainNav .navbar-nav .nav-item .nav-link {
-    padding: 1.1em 1em !important;
-  }
-  
-  #mainNav.navbar-shrink {
-    padding-top: 0;
-    padding-bottom: 0;
-    background-color: black;
-  }
-  
-  #mainNav.navbar-shrink .navbar-brand {
-    font-size: 1.25em;
-    padding: 12px 0;
-  }
-}
-
-/* Adjustments for smaller screens */
-@media (max-width: 768px) {
-  #mainNav .navbar-toggler {
-    right: 10px; /* Adjust for smaller screens */
-  }
-
-  #mainNav .container {
-    padding-left: 10px;
-    padding-right: 10px;
+    .navbar-brand {
+      font-size: 1.75em;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s;
+    }
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          padding: 1.1em 1em !important;
+        }
+      }
+    }
+    &.navbar-shrink {
+      padding-top: 0;
+      padding-bottom: 0;
+      background-color: black;
+      .navbar-brand {
+        font-size: 1.25em;
+        padding: 12px 0;
+      }
+    }
   }
 }
-
-// @media (min-width: 992px) {
-//   #mainNav {
-//     padding-top: 25px;
-//     padding-bottom: 25px;
-//     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
-//     -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
-//     transition: padding-top 0.3s, padding-bottom 0.3s;
-//     border: none;
-//     background-color: transparent;
-//     .navbar-brand {
-//       font-size: 1.75em;
-//       -webkit-transition: all 0.3s;
-//       -moz-transition: all 0.3s;
-//       transition: all 0.3s;
-//     }
-//     .navbar-nav {
-//       .nav-item {
-//         .nav-link {
-//           padding: 1.1em 1em !important;
-//         }
-//       }
-//     }
-//     &.navbar-shrink {
-//       padding-top: 0;
-//       padding-bottom: 0;
-//       background-color: black;
-//       .navbar-brand {
-//         font-size: 1.25em;
-//         padding: 12px 0;
-//       }
-//     }
-//   }
-// }
